# telegraph-center

./: Cargo.toml  README.md  TERMINOLOGY.md  deny.toml  flake.nix
docs/adr/: 0001-sqlite-metadata-and-filesystem-audio.md  0002-uploads-complete-before-background-processing.md  0003-secrets-come-from-environment.md  0004-at-least-once-webhook-delivery.md  0005-app-managed-operator-authentication.md  0006-single-domain-path-based-exposure.md  0007-client-identity-from-nginx-mtls-fingerprint.md  0008-axum-and-tokio-service-foundation.md  0009-sqlx-for-sqlite-access.md  0010-server-rendered-monitor-with-askama.md  0011-reqwest-for-outbound-http-integrations.md  0012-soniox-async-files-api-without-transcoding.md  0013-hmac-signed-webhook-sinks.md
docs/deployment/: README.md  config.example.toml  octavian-example.nix  telegraph.env.example
migrations/: 0001_initial.sql  0002_manual_retry_window.sql
nix/: development.nix  nixos-module.nix
src/: blob.rs  config.rs  domain.rs  lib.rs  main.rs  routing.rs  runtime.rs  seam.rs  wav.rs
src/delivery/: hmac.rs  mod.rs  payload.rs  webhook.rs
src/http/: api.rs  error.rs  mod.rs
src/monitor/: auth.rs  cookies.rs  csrf.rs  handlers.rs  mod.rs  session.rs  templates.rs  throttle.rs  tokens.rs
src/soniox/: client.rs  error.rs  mod.rs  render.rs
src/storage/: mod.rs  sqlite.rs
src/workers/: delivery.rs  mod.rs  retry.rs  routing.rs  transcription.rs
templates/monitor/: _nav.html  base.html  detail.html  list.html  login.html
tests/: delivery.rs  monitor.rs  repository.rs  runtime.rs  soniox.rs  upload.rs  workers.rs
