[package]
name = "telegraph-center"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "migrate",
  "macros",
] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
  "time",
  "sync",
] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
thiserror = "2"
axum = { version = "0.8", features = ["multipart"] }
ulid = "1"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
