[package]
name = "telegraph-center"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "migrate",
  "macros",
] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
  "time",
  "sync",
] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
thiserror = "2"
axum = { version = "0.8", features = ["multipart"] }
ulid = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
hmac = "0.12"
sha2 = "0.10"
# Operator auth (M6): Argon2id PHC password verification, OS CSPRNG tokens, and
# server-rendered login/monitor templates. argon2 needs only PHC verification, so
# the salt-generating `rand` default feature is left off. Session/CSRF tokens are
# high-entropy random values, hashed with the existing `sha2`, not argon2.
argon2 = { version = "0.5", default-features = false, features = [
  "alloc",
  "password-hash",
] }
getrandom = "0.2"
askama = "0.12"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
